[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/GUILabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/gui/GUIButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menus/OptionsMenu.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.498039 )

[node name="PauseMenu" type="PopupPanel"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 710.0
margin_top = 415.0
margin_right = 1210.0
margin_bottom = 665.0
rect_min_size = Vector2( 250, 250 )
custom_constants/separation = 15

[node name="Title" parent="CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 500.0
margin_bottom = 13.0
text = "Paused"
align = 1

[node name="Pause" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 500.0
margin_bottom = 201.0
custom_constants/separation = 15

[node name="Resume" parent="CenterContainer/VBoxContainer/Pause" instance=ExtResource( 3 )]
margin_right = 500.0
margin_bottom = 32.0
text = "Resume"

[node name="Options" parent="CenterContainer/VBoxContainer/Pause" instance=ExtResource( 3 )]
margin_top = 47.0
margin_right = 500.0
margin_bottom = 79.0
text = "Options"

[node name="ReturnToMenu" parent="CenterContainer/VBoxContainer/Pause" instance=ExtResource( 3 )]
margin_top = 94.0
margin_right = 500.0
margin_bottom = 126.0
text = "Return to Main Menu"

[node name="Exit" parent="CenterContainer/VBoxContainer/Pause" instance=ExtResource( 3 )]
margin_top = 141.0
margin_right = 500.0
margin_bottom = 173.0
custom_constants/hseparation = 0
text = "Exit to Desktop"

[node name="Options" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 500.0
margin_bottom = 207.0

[node name="OptionsMenu" parent="CenterContainer/VBoxContainer/Options" instance=ExtResource( 4 )]
margin_right = 500.0
margin_bottom = 119.0

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/Options"]
margin_top = 123.0
margin_right = 500.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" parent="CenterContainer/VBoxContainer/Options" instance=ExtResource( 3 )]
margin_top = 147.0
margin_right = 500.0
margin_bottom = 179.0
text = "Back"
[connection signal="visibility_changed" from="." to="." method="_on_PauseMenu_visibility_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Pause/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Pause/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Pause/ReturnToMenu" to="." method="_on_ReturnToMenu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Pause/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options/Back" to="." method="_on_Back_pressed"]
